src/objects/MCAR_Manufacturer_Site__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCAR_Manufacturer_Site_Address__c</fullName>
        <label>Manufacturer Site Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manufacturer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manufacturer Name</label>
        <referenceTo>MCAR_Manufacturer__c</referenceTo>
        <relationshipLabel>Manufacturer Sites</relationshipLabel>
        <relationshipName>MCAR_Manufacturer_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Site_Name_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>Site Name External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>MCAR Manufacturer Site</label>
    <nameField>
        <label>Manufacturer Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MCAR Manufacturer Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Zip_code_format</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Zip__c  == null, ISNULL(Zip__c) ,! ISNUMBER(Zip__c) )</errorConditionFormula>
        <errorDisplayField>Zip__c</errorDisplayField>
        <errorMessage>ZIP code error Enter only Numeric value</errorMessage>
    </validationRules>
</CustomObject>